--- a/css/pages.css
+++ b/css/pages.css
@@ -75,6 +75,12 @@ body {
 	/*position: static;*/
 	font-family: proxima_nova_rgregular;
 }
+#back {
+	font-size: 20px;
+	text-align: center;
+	/*position: static;*/
+	font-family: proxima_nova_rgregular;
+}
 #comingsoon {
 	/*margin-top: 5vh;
 	margin-left: 15vh;
