--- a/css/pages.css
+++ b/css/pages.css
@@ -101,7 +101,7 @@ body {
 /* Style the tab */
 .tab {
   overflow: hidden;
-  border: 1px solid #ccc;
+  border: none;
   background-color: #f1f1f1;
 }
 
@@ -130,7 +130,7 @@ body {
 .tabcontent {
   display: none;
   padding: 6px 12px;
-  border: 1px solid #ccc;
+  border: none;
   border-top: none;
 } 
 /* Navigation */
