--- a/css/pages.css
+++ b/css/pages.css
@@ -107,7 +107,7 @@ body {
 
 /* Style the buttons that are used to open the tab content */
 .tab button {
-  background-color: inherit;
+  background-color: #131414;
   float: left;
   border: none;
   outline: none;
