--- a/css/pages.css
+++ b/css/pages.css
@@ -120,11 +120,13 @@ body {
 /* Change background color of buttons on hover */
 .tab button:hover {
   background-color: #ddd;
+  color: #131414;
 }
 
 /* Create an active/current tablink class */
 .tab button.active {
   background-color: #ccc;
+  color: #131414;
 }
 
 /* Style the tab content */
