--- a/css/pages.css
+++ b/css/pages.css
@@ -113,6 +113,7 @@ body {
   border: none;
   outline: none;
   cursor: pointer;
+  font-size: 17px;
   padding: 14px 16px;
   transition: 0.3s;
 }
@@ -238,7 +239,7 @@ nav ul li {
 #wrapper {
 	margin-left: 1vh;
 	margin-right: 1vh;
-	/*font-size: 20px; jury is still out on this */
+	font-size: 17px;
 }
 .footer_column {
 	width: 100%;
