--- a/css/pages.css
+++ b/css/pages.css
@@ -151,9 +151,14 @@ input[type=text], select, textarea {
 
 /* Style the submit button with a specific background color etc */
 input[type=submit] {
-  background-color: #4CAF50;
-  color: white;
-  padding: 12px 20px;
+  background-color: #131414;
+  color: #4fdbdb;
+  /*float: left;*/
+  /*outline: none;*/
+  cursor: pointer;
+  font-size: 17px;
+  padding: 14px 14px;
+  transition: 0.3s;
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -161,15 +166,16 @@ input[type=submit] {
 
 /* When moving the mouse over the submit button, add a darker green color */
 input[type=submit]:hover {
-  background-color: #45a049;
+  background-color: #ddd;
+  color: #131414;
 }
 
-/* Add a background color and some padding around the form */
+/* Add a background color and some padding around the form 
 .container {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
-} 
+} */
 /* Navigation */
 header nav ul {
 	list-style: none;
