--- a/css/pages.css
+++ b/css/pages.css
@@ -140,9 +140,10 @@ body {
  /* Style inputs with type="text", select elements and textareas */
 input[type=text], select, textarea {
   width: 100%; /* Full width */
+  float: center;
   padding: 12px; /* Some padding */ 
-  border: 1px solid #ccc; /* Gray border */
-  border-radius: 4px; /* Rounded borders */
+  border: 1px solid #4fdbdb;
+  /*border-radius: 4px;  Rounded borders */
   box-sizing: border-box; /* Make sure that padding and width stays in place */
   margin-top: 6px; /* Add a top margin */
   margin-bottom: 16px; /* Bottom margin */
@@ -153,14 +154,14 @@ input[type=text], select, textarea {
 input[type=submit] {
   background-color: #131414;
   color: #4fdbdb;
-  /*float: left;*/
-  /*outline: none;*/
+  float: center;
+  outline: #4fdbdb;
   cursor: pointer;
   font-size: 17px;
   padding: 14px 14px;
   transition: 0.3s;
   border: none;
-  border-radius: 4px;
+  /*border-radius: 4px;*/
   cursor: pointer;
 }
 
